// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Should render App 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeState": Array [],
    }
  }
>
  <App />
</ContextProvider>
`;

exports[`CreateOrder Should render create order form 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeState": Array [],
    }
  }
>
  <Connect(Order) />
</ContextProvider>
`;

exports[`Orders Should render Orders 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeState": Array [],
    }
  }
>
  <Connect(OrdersList) />
</ContextProvider>
`;
